NetBSD Problem Report #31966

From yamt@mwd.biglobe.ne.jp  Tue Nov  1 09:27:25 2005
Return-Path: <yamt@mwd.biglobe.ne.jp>
Received: from yamt.dyndns.org (FLA1Abm205.kng.mesh.ad.jp [219.107.215.205])
	by narn.netbsd.org (Postfix) with ESMTP id 7ECF063B900
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  1 Nov 2005 09:27:25 +0000 (UTC)
Message-Id: <1130837208.568929.1053.nullmailer@yamt.dyndns.org>
Date: Tue, 01 Nov 2005 18:26:48 +0900
From: yamt@mwd.biglobe.ne.jp
Reply-To: yamt@mwd.biglobe.ne.jp
To: gnats-bugs@netbsd.org
Subject: scheduler multiprocessor problem
X-Send-Pr-Version: 3.95

>Number:         31966
>Category:       kern
>Synopsis:       scheduler multiprocessor problem
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Nov 01 09:28:00 +0000 2005
>Closed-Date:    Fri Jul 14 13:25:31 +0000 2017
>Last-Modified:  Fri Jul 14 13:25:31 +0000 2017
>Originator:     YAMAMOTO Takashi <yamt@mwd.biglobe.ne.jp>
>Release:        NetBSD 3.99.10
>Organization:

>Environment:


System: NetBSD kaeru 3.99.10 NetBSD 3.99.10 (build.kaeru.xen.nodebug) #21: Tue Nov 1 15:52:04 JST 2005 takashi@kaeru:/home/takashi/work/kernel/build.kaeru.xen.nodebug i386
Architecture: i386
Machine: i386
>Description:
	- decay of p_estcpu is a function of loadavg, which is
	  independent from number of cpus.
	- p_estcpu is increased on each cpus by a constant.

	assuming enough number of runnable lwps,
	the above two get more imbalanced if a system has more cpus.
>How-To-Repeat:
>Fix:
	make runqueue and loadavg per-cpu?

>Release-Note:

>Audit-Trail:

From: "YAMAMOTO Takashi" <yamt@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/31966 CVS commit: src/sys/kern
Date: Thu, 14 Apr 2011 16:19:35 +0000

 Module Name:	src
 Committed By:	yamt
 Date:		Thu Apr 14 16:19:35 UTC 2011

 Modified Files:
 	src/sys/kern: sched_4bsd.c

 Log Message:
 bluntly balance estcpu decay for ncpu > 1.  PR/31966.


 To generate a diff of this commit:
 cvs rdiff -u -r1.25 -r1.26 src/sys/kern/sched_4bsd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: maxv@NetBSD.org
State-Changed-When: Fri, 14 Jul 2017 13:25:31 +0000
State-Changed-Why:
"fixed", see tech-kern


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.