bluntly balance estcpu decay for ncpu > 1.  PR/31966.